--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,10 @@
     <string name="label_hand_presence_confidence_threshold">Presence
         Threshold</string>
     <string name="label_delegate">Delegate</string>
+    <string name="i_m_not_deaf">I\'m not deaf</string>
+    <string name="welcome_to_handtalk">Welcome to HandTalk!</string>
+    <string name="handtalk_goal_desc">Now deaf can communicate in their native language</string>
+    <string name="start_using_handtalk">Start using HandTalk</string>
 
     <string-array name="delegate_spinner_titles">
         <item>CPU</item>
