--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     ~ limitations under the License.
 -->
 <resources>
-    <string name="app_name">HandTalk</string>
+    <string name="app_name">Hand Talk</string>
 
     <string name="media_pipe">MediaPipe</string>
 
@@ -49,6 +49,7 @@
     <string name="welcome_to_handtalk">Welcome to HandTalk!</string>
     <string name="handtalk_goal_desc">Now deaf can communicate in their native language</string>
     <string name="start_using_handtalk">Start using HandTalk</string>
+    <string name="categories">Categories</string>
 
     <string-array name="delegate_spinner_titles">
         <item>CPU</item>
